# scripts

./: .gitignore  README.md  backupScript.sh  fabfile.py  gitconfig.txt  i3.cfg  polybar.ini  primes.py  profile.txt  promptHostname.pre.ks  status.py  sway.cfg  taskrc  template-notes.txt  vifmrc  vim-presentation.txt  vimrc.txt
ansible/: ansible-libvirt-create-fedora.yml  ansible-libvirt-create-k8s.yml  ansible-libvirt-create.yml  ansible-libvirt-delete.yml  createCentosUpsilon.sh  createOpenShiftEnterpriseEnvironment.sh  update.yml
ansible-iac-environments/: ocp4.sh
ansible-inventories/: teratan.lan  teratan.net  upsilon-drones
ansible-playbooks/: Makefile  hypervisor.yml  site.yml  update.yml
azure-templates/: rhel-73.arm.json
examples/: load.py  nics.rules  openshift-pv-nfs.yml  openshift-pvc.yml  primes.py
kickstarts/: fedora-minimal-vanilla.ks  fedora-minimal.ks  fedora-vanilla.ks  fedora.ks  rhel-minimal-vanilla.ks  rhel-minimal.ks  rhel.ks
nvim/: init.lua  lazy-lock.json  nvim
puppet/: basics.pp
puppet-module-jwr/: Makefile  Modulefile
reusable-ansible-inventories/: OSEv3-inventory
single-purpose-ansible-playbooks/: superone-poweron.yml
src/: .gitignore  LICENSE  README.md  pyproject.toml
src/ref/: openapi.json
src/sickrock_client/: __init__.py  _openapi.py  cli.py  client.py  config.py  exceptions.py
utils/: autocommit-tasks.sh  backupScript.sh  close_stale_issues.py  create-vm.sh  create_openshift_volume.py  dbounce  fedora-overnight-upgrade  gannex-pruner  generate-udev-nics.sh  hydra-tr-poweron.sh  jwr-gh-close-stale-issues.py  (+16 more)
(+122 files in other folders)
